[package]
name = "app"
version = "1.0.0"
authors = ["Baidu"]
build = "build.rs"

[dependencies]
sgx_types = { rev = "v1.1.4-upgrade", git = "https://github.com/yunuseozer/incubator-teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.4-upgrade", git = "https://github.com/yunuseozer/incubator-teaclave-sgx-sdk.git" }
dirs = "1.0.2"
